--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h1>Casper - The Warrior</h1>
   <img class="hero-img" src="./casper.png" alt="image">
 
-  <p class="para">casper was born in my street along with 5 other puppies, but sadly, he was a special child. He
+  <p class="para">Casper was born in my street along with 5 other puppies, but sadly, he was a special child. He
     couldn’t
     walk; and he will be crying all day in pain.
 
@@ -41,7 +41,7 @@
 
     After several weeks of continuous diet and medication, he started responding well, and thankfully he was not
     affected by canine distemper. He started walking on his own, but his left front leg is not growing as expected; it
-    is a birth defect.
+    is a birth defect.<br>
 
     Now after 1.5 years, he is a part of our family. And he is a very sharp, brave, happy dog.
 
